--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </form>
     </header>
 
-    <script src="/weather.js"></script>
+    <script src="./weather.js"></script>
 </body>
 
 </html>
